methylKit 1.3.7
--------------
IMPROVEMENTS AND BUG FIXES
* if methylDiff object contains NA in a qvalue/meth.diff column 
  the getMethylDiff function returns an error. This is now fixed:
  https://github.com/al2na/methylKit/issues/83

methylKit 1.3.6
--------------
* changes to methSeg() function: update function description 
  by beeing more explicit about the sorting, 
  sort(x,ignore.strand=TRUE) is now called once if needed, 
  update tests 

methylKit 1.3.5
--------------
IMPROVEMENTS AND BUG FIXES
* fix problem with methSeg() error occurring when GRanges is not sorted by position

methylKit 1.3.4
--------------
IMPROVEMENTS AND BUG FIXES
* fix problem with assocComp() on methylBaseDB 

methylKit 1.3.3
--------------
IMPROVEMENTS AND BUG FIXES
* changes to calculateDiffMeth() function: add a message explaining 
  the calculation procedure based on either two or more treatment groups, 
  fixed bugs that prohibited the use of treatment groups other than 0/1 
  in two group case, allow for more than two groups, update tests
* changes in methSeg() function: update function documentation to 
  inform that provided Granges has to be sorted, 
  add check if granges is sorted and contains at least one meta.col

methylKit 1.3.2
--------------
IMPROVEMENTS AND BUG FIXES
* quick fix for long filename issue: in unite() and calculateMethylDiff() 
  instead of concatenated sample_ids, filename will be "methylBase" 
  concatenated with either 13-char random string or provided suffix
* updated vignette: added two short FAQs

methylKit 1.3.1
--------------
IMPROVEMENTS AND BUG FIXES
* fix conversion rate error in methCall() 

methylKit 1.1.8
--------------
IMPROVEMENTS AND BUG FIXES
* fix methSeg error when only one segment is returned from fastseg,
  add case handling for methSeg2bed
* check for user interruption in methCall to enable stop in execution
* changes to select() function: check for out-of-bound indices to 
  prevent downstream errors
  
methylKit 1.1.7