@@ -234,7 +234,7 @@ setMethod("regionCounts", signature(object="methylBase",regions="GRanges"),
             coverage=.SD=numTs=id=numTs1=covered=NULL
             
             # use data.table to sum up counts per region
-            sum.dt=dt[,c(lapply(.SD,sum),covered=length(numTs1)),by=id] 
+            sum.dt=dt[,c(lapply(.SD,sum, na.rm=T),covered=length(numTs1)),by=id] 
             sum.dt=sum.dt[sum.dt$covered>=cov.bases,]
             temp.df=as.data.frame(regions) # get regions to a dataframe
             
@@ -242,6 +242,10 @@ setMethod("regionCounts", signature(object="methylBase",regions="GRanges"),
             # valuesList = names(values(regions))
             # nameid = valuesList[grep (valuesList, pattern="name")]
             
+            #set all zero coverage tiles to missing
+            for ( j in seq(2,ncol(sum.dt),by=3) ){
+              data.table::set(sum.dt, which(sum.dt[[j]]==0),j:(j+2),NA)
+            }
 
 
             
@@ -451,7 +455,8 @@ setMethod("regionCounts", signature(object="methylBase",regions="GRangesList"),
             
             id=.SD=numTs1=NULL
             # use data.table to sum up counts per region
-            sum.dt=dt[,c(lapply(.SD,sum),covered=length(numTs1)),by=id] 
+            # treat missing values as they had zero coverage
+            sum.dt=dt[,c(lapply(.SD,sum,na.rm=T),covered=length(numTs1)),by=id] 
             sum.dt=sum.dt[sum.dt$covered>=cov.bases,]
             temp.df=as.data.frame(regions) # get regions to a dataframe
             
@@ -459,8 +464,10 @@ setMethod("regionCounts", signature(object="methylBase",regions="GRangesList"),
             # valuesList = names(values(regions))
             # nameid = valuesList[grep (valuesList, pattern="name")]
             
-            
-            
+            #set all zero coverage tiles to missing
+            for ( j in seq(2,ncol(sum.dt),by=3) ){
+              data.table::set(sum.dt, which(sum.dt[[j]]==0),j:(j+2),NA)
+            }
             
             #create a new methylBase object to return
             new.data=data.frame(#id      =new.ids,
